# Code-TREAT

./: .gitignore  POLYHUMANEVAL_PYTHON_SETUP.md  README.md  debug_extractor.py  main.py  pyproject.toml  upload_code_summarization_datasets.py
compatible_requirements/: apimd_requirements.txt  codetiming_requirements.txt  cookiecutter_requirements.txt  dataclasses_json_requirements.txt  docstring_parser_requirements.txt  flutes_requirements.txt  flutils_requirements.txt  httpie_requirements.txt  isort_requirements.txt  polyhumaneval_requirements.txt  py_backwards_requirements.txt  pymonet_requirements.txt  pypara_requirements.txt  pysnooper_requirements.txt  pytutils_requirements.txt  sanic_requirements.txt  semantic_release_requirements.txt  string_utils_requirements.txt  sty_requirements.txt  thefuck_requirements.txt  thonny_requirements.txt  tornado_requirements.txt  tqdm_minimal_requirements.txt  tqdm_requirements.txt  typesystem_requirements.txt  youtube_dl_requirements.txt
configs/: configs.yaml  sample_config.yaml
environment_setup/: setup_polyhumaneval_environments.py  setup_symprompt_environment.py  setup_symprompt_environment_backup.py
evaluators/: __init__.py  code_generation_evaluator.py  code_reasoning_evaluators.py  code_review_evaluator.py  code_summarization_evaluator.py  code_translation_evaluator.py  symprompt_evaluator.py  vulnerability_detection_evaluator.py
extractors/: __init__.py
file_search_utils/: __init__.py  search.py
models/: README.md  alibaba_api.py  anthropic_api.py  apibase.py  chatanywhere_api.py  deepinfra_api.py  model_list.py  (+5 more)
(+152 files in other folders)
