[project]
name = "treat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.67.0",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "hjson>=3.1.0",
    "javalang>=0.13.0",
    "numpy>=2.3.3",
    "openai>=1.107.1",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "replicate>=1.0.7",
    "scikit-learn>=1.7.2",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "tree-sitter==0.23.2",
    "tree-sitter-language-pack>=0.9.0",
    "zhipuai>=2.1.5.20250825",
]
